src/pages/ChristmasTree/ChristmasTree.module.css
.container {
    background-color: var(--color-green);
}

.popup {
    flex-direction: column;
    align-items: center;
    padding: 20px;
    inset: unset;
    border: unset;
    border-radius: var(--border-radius);
    color: var(--color-black);
    background-color: rgba(var(--color-white), 0.9);
    box-shadow: 10px 10px 15px rgba(94, 51, 0, 0.30);
    backdrop-filter: blur(15px);
    -webkit-backdrop-filter: blur(12px);
    left: 50%;
    transform: translateY(20%) translateX(-50%);
    font-size: 20px;
    font-weight: 500;
    animation: popupAppear 0.7s forwards;
}

.popup:popover-open {
    display: flex;
}

.popupTitle {
    display: flex;
    margin-bottom: 10px;
    text-align: center;
    font-size: 19px;
    font-weight: 700;
}

.popupEmoji {
    font-size: 45px;
}

.closeButton {
    background-color: transparent;
    border: none;
    margin-left: 10px;
    cursor: pointer;
    border-radius: 10px;
}

.closeButton:hover {
    background-color: var(--color-grey);
}

.closeButton > * {
    position: relative;
    top: 2px;
}

.form {
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin: 0 20px 30px;
}

.text {
    background-color: var(--color-white);
    border-radius: var(--border-radius);
    padding: 20px;
    color: var(--color-black);
}

.input {
    padding: 16px;
    border-radius: var(--border-radius);
    border: none;
    resize: vertical;
}

.submitButton {
    font-size: 20px;
    padding: 10px 20px;
    color: var(--color-white);
    border-radius: var(--border-radius);
    border: none;
    background: linear-gradient(to right, var(--color-red), var(--color-yellow));
    width: fit-content;
    transition: opacity 0.2s;
}

.submitButton :only-child {
    transition: transform 0.2s;
}

.submitButton:hover:not(:disabled) :only-child {
    transform: scale(1.05);
}

.submitButton:disabled {
    opacity: 0.85;
}

.card {
    font-size: 18px;
    margin: 0 20px;
    padding: 20px;

    color: var(--color-black);
    background-color: var(--color-white);
    border-radius: var(--border-radius);
    transition: all 0.2s;
    animation: cardAppear 0.7s backwards;
    animation-delay: 0.2s;
}

.cardHeader {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.moderationTag {
    padding: 3px 6px;

    color: var(--color-white);
    background-color: var(--color-red-light);

    border-radius: 10px;
    font-size: 10px;
    font-weight: 500;
}

.cardName {
    font-weight: 700;
}

.cardMessage {
    font-weight: 500;
}

.cardsContainer {
    display: flex;
    flex-direction: column;
    gap: 16px;
    margin-bottom: 20px;
}

@keyframes cardAppear {
     from {
         transform: translateY(100%);
         opacity: 0;
     }
     to {
         transform: translateY(0%);
         opacity: 1;
     }
 }

@keyframes popupAppear {
    from {
        transform: translate(-50%, 0);
        opacity: 1;
    }
    to {
        transform: translate(-50%, 170px);
        opacity: 1;
    }
}

